jasshaus/content/css/game.css
:root {
    font-family: Roboto, sans-serif;
}

img { user-select: none; }

#background,
body {
    position: absolute;

    width: 100%;
    height: 100%;
	margin: 0;

    overflow: hidden;
}

.Window,
.Board {
    padding: 1rem;
	color: #EEEEEE;
    background-color: #000000;

	border-color: #DEA487;
	border-width: 0.5rem;
    border-radius: 0.5rem;
    border-style: solid;
}

.CenterX {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
}
.CenterY {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
}
.CenterXY {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translateX(-50%) translateY(-50%);
}

#roundDetails {
    position: absolute;
	display: flex;
	flex-direction: column;

    top: 0;
    left: 0;

    text-align: center;

	border-radius: 0 0 0.5rem 0;
    border-width: 0 0.5rem 0.5rem 0;
}

#roundSymbols {
	display: flex;
	visibility: hidden;

	img {
		width: 6rem;
		height: 6rem;
	}

	> div {
		display: flex;
		flex-direction: column;

		img {
			width: 3rem;
			height: 3rem;
		}
	}
}

#gameDetails {
    position: absolute;

    top: 0;
    right: 0;

    font-size: 1.5rem;

    overflow: hidden;
    white-space: nowrap;

	border-radius: 0 0 0 0.5rem;
	border-width: 0 0 0.5rem 0.5rem;
}

#gameTeams {
	display: flex;
	flex-direction: column;
}

.ActionButton {
    width: 1.6cm;
    height: 1.6cm;

	z-index: 420;

	border-radius: 0.1cm;
    margin: 0.2cm;
	padding: 0.2cm;

    background-color: #000000;
    cursor: pointer;
	box-sizing: border-box;
}

.ActionButton:hover {
    background-color: #363636;
}

.ActionButton.Active {
	border-style: solid;
	border-width: 0.25em;
	border-color: lime;
}

#botrightbuttons,
#botleftbuttons,
.ActionButtonContainer {
	display: flex;
	flex-direction: column-reverse;

	z-index: 420;
	position: absolute;
}

#botrightbuttons {
	right: 2px;
	bottom: 2px;
}

#botleftbuttons {
	left: 2px;
	bottom: 2px;
}

#showButton {
	position: absolute;
	font-size: 2rem;
	display: none;
	left: 0;
	bottom: var(--hand-height);
}

#turnindicator {
	display: none;
	position: absolute;

	text-align: center;
	max-width: 12rem;
	overflow: auto;

	z-index: 42;

	margin: 1rem;

	bottom: var(--hand-height);
    right: 0;
}

#showqueue {
	display: flex;
	flex-direction: column;

	.Show {
		height: 3em;
	}
}

.PlayerMSG .Show {
	height: 3em;
}

.Misere {
	filter: invert(100%);
}

body > .PlayerMSG {
	position: absolute;

	left: 50%;
	bottom: var(--hand-height);

	transform: translateX(-50%);
}

.DragOver {
    border-color: #33ff33 !important;
}

